[package]
name = "rhai-sci-repl"
version = "0.1.0"
rust-version = "1.61.0"
edition = "2018"
resolver = "2"
authors = ["David Crist"]
description = "Scientific REPL for rhai-sci"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.5"
ndarray = { version = "0.15.6" }
# ndarray-linalg = { version = "0.13", features = ["openblas-static"] }
# nalgebra = { version = "0.32.3" }
num-complex = { version = "0.4.4" }
rhai = { version = "1.15.1", features = ["bin-features", "internals"] }
rhai-sci = { version = "0.2.0" }
rustyline = { version = "11" }
reedline = { version = "0.22.0" }
shlex = { version = "1.1.0" }

[build-dependencies]
home = "0.5.5"
ndarray = { version = "0.15.6" }
# ndarray-linalg = { version = "0.13", features = ["openblas-static"] }
# nalgebra = { version = "0.32.3" }
num-complex = { version = "0.4.4" }
rhai = { version = "1.15.1", features = ["bin-features", "internals"] }
rhai-sci = { version = "0.2.0" }
rustyline = { version = "11" }
reedline = { version = "0.22.0" }
shlex = {version = "1.1.0" }




[[bin]]
name = "rhai-sci-repl"
# required-features = ["rustyline"]
